--- a/main.css
+++ b/main.css
@@ -49,16 +49,9 @@
   height: 25px;
   padding-left: 10px;
 }
-
-.navbar1:hover{
-background-color: white;
-text-shadow: 0px -10px black;
-background-image: url(https://cdn.shopify.com/s/files/1/1104/4168/t/414/assets/logo-black.svg);
-background-repeat: no-repeat;
-background-position: center;
-background-size: 172px;
+.navbar1 ul:hover {
+background-color: black;
 }
-
 
 /*--------------------------navbar-------------------------------*/
 
